agregada fuente, se arreglan más bugs de sonarcube

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <!--Links de network-->
         <link rel="preload" href="styles.css" as="style">
         <link rel="stylesheet" href="styles.css">
+        <!--Fuente Roboto Mono-->
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     </head>
     <body>
       <figure>
