se arreglan bugs y codesmells de sonarqube

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="preload" href="styles.css" as="style">
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
+    <body> 
       <form id="form1" >
         <h1 class="Titulo1">Proyecto 1 de grafos</h1>
         <h1 class="Titulo2">Ingrese el tipo de grafo</h1>
@@ -27,7 +27,7 @@
         <span id="node-operation">node</span> <br />
         <table style="margin: 1">
           <caption></caption>
-          <th></th>
+          <th id="Bugsonar7"></th>
           <tbody>
             <div>Ingrese el ID del nodo</div>
             <tr>
@@ -45,12 +45,12 @@
         <span id="edge-operation">edge</span> <br />
         <table style="margin: auto">
           <caption></caption>
-          <th></th>
+          <th id="Bugsonar1"></th>
           <tbody>
             <div>Ingrese el valor de la arista</div>
             <tr>
               <td>Peso</td>
-              <td><input type="number" id="edge-label" value="1" /></td>
+              <td><input type="number" id="edge-label" value="0" /></td>
             </tr>
           </tbody>
         </table>
@@ -68,7 +68,7 @@
         <h2 class="Titulo2">Matriz</h2>
         <table id="table">
           <caption></caption>
-          <th></th>
+          <th id="Bugsonar2" ></th>
         </table>
         
         
@@ -77,7 +77,7 @@
           <h2 class="Titulo2">Tabla Caminos</h2>
           <table id="TablaCam">
             <caption></caption>
-            <th></th>
+            <th id="Bugsonar3"></th>
           </table>
         </div>  
         <div id="conex"></div>
@@ -97,7 +97,7 @@
       <td>
         <table>
           <caption></caption>
-          <th></th>
+          <th id="Bugsonar5"></th>
           <td>
             <div>ingrese ID nodo de llegada e ID nodo de salida</div>
             <input type="number" id="desde" value="0" onfocus=this.value="">
@@ -116,7 +116,7 @@
       <td>
         <table>
           <caption></caption>
-          <th></th>
+          <th id="Bugsonar6"></th>
           <td>
             <div>ingrese ID nodo de llegada e ID nodo de salida</div>
             <input type="number" id="inicio" value="0" onfocus=this.value="">
