--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
         </td>
       </tr>
     </div> 
+    <div class="grafo"></div>
     
   <!--Main de JavaScript-->
   <script src = "main.js" type="text/javascript" href = "main.js"> </script>
